--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,9 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./*"],
-      "@/utils/*":["app/utils/*"]
+      "@/utils/*":["app/utils/*"],
+      "@/components/*": ["components/*"],
+
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
